--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Global Technology Summit</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -39,10 +39,41 @@
   
   <div class="container my-5">
     <div class="row mb-4">
-      <div class="col-12 bg-light p-5 rounded">
-        <h1 class="text-left">Welcome to Global Technology Summit</h1>
-        <p class="text-left">Join top innovators, industry leaders, and experts shaping the future of technology.</p>
-        <button class="btn btn-primary">Get Your Ticket</button>
+      <div id="welcomeCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="bg-light p-5 rounded text-center">
+              <h1>Welcome to Global Technology Summit</h1>
+              <p>Join top innovators, industry leaders, and experts shaping the future of technology.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="bg-light p-5 rounded text-center">
+              <h1>Explore Cutting-Edge Innovations</h1>
+              <p>Discover the latest advancements in AI, cybersecurity, and health tech.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="bg-light p-5 rounded text-center">
+              <h1>Network with Industry Leaders</h1>
+              <p>Connect with founders, innovators, and investors from around the globe.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="bg-light p-5 rounded text-center">
+              <h1>Shape the Future of Technology</h1>
+              <p>Be part of discussions that define the next era of innovation.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#welcomeCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#welcomeCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
 
@@ -106,5 +137,28 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    function applyRTLBasedOnLanguage() {
+      const rtlLanguages = ['ar', 'he', 'fa', 'ur']; // List of RTL languages
+      const htmlElement = document.documentElement;
+      const currentLang = htmlElement.lang;
+
+      if (rtlLanguages.includes(currentLang)) {
+        htmlElement.setAttribute('dir', 'rtl');
+      } else {
+        htmlElement.setAttribute('dir', 'ltr');
+      }
+    }
+
+    // Observe changes to the <html> element's lang attribute
+    const observer = new MutationObserver(() => {
+      applyRTLBasedOnLanguage();
+    });
+
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ['lang'] });
+
+    // Initial check
+    applyRTLBasedOnLanguage();
+  </script>
 </body>
 </html>
